# htcw_ml

./: CMakeLists.txt  README.md  idf_component.yml  library.json  library.properties  ml_tests.cpp
include/: ml_reader.hpp
src/: ml_reader.hpp
zephyr/: CMakeLists.txt
